<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_DigOutput_HMI" Id="{dbb85a70-8545-4a4b-94aa-bba22dd77bb4}">
    <Declaration><![CDATA[TYPE ST_DigOutput_HMI :
STRUCT
	sDescription : STRING;
	sNameOff : STRING;
	sNameOn : STRING;
	bStaOff : BOOL;
	bStaOn : BOOL;
	bCmdOffPressed : BOOL;
	bCmdOnPressed : BOOL;
	bBtnOffEnabled : BOOL;
	bBtnOnEnabled : BOOL;
	s_sInterlockedReason : STRING;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>