<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_ValveWithFB_HMI" Id="{e1dd5eb2-39db-4c99-b682-7e121cb40203}">
    <Declaration><![CDATA[TYPE ST_ValveWithFB_HMI :
STRUCT
	sDescription : STRING;
	sNameOff : STRING;
	sNameOn : STRING;
	bStaOff : BOOL;
	bStaOn : BOOL;
	bStaOffError : BOOL;
	bStaOnError : BOOL;
	bCmdOffPressed : BOOL;
	bCmdOnPressed : BOOL;
	bBtnOffEnabled : BOOL;
	bBtnOnEnabled : BOOL;
	s_sInterlockedReasonOn : STRING;
	s_sInterlockedReasonOff : STRING;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>